[package]
name = "audio-circlelyzer-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
audio-circlelyzer-lib = { path = "../audio-circlelyzer-lib" }
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
minijinja = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
